@@ -1,3 +1,8 @@
+2015-01-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/64520
+	* pt.c (unify): Don't try to deduce to std::initializer_list<T...>.
+
 2015-01-12  Jason Merrill  <jason@redhat.com>
 
 	PR c++/64547
